--- a/src/main/resources/assets/micwands/lang/en_us.lang
+++ b/src/main/resources/assets/micwands/lang/en_us.lang
@@ -4,6 +4,7 @@ item.micwands.wandfollow.name=Wand of Following
 item.micwands.wandfire.name=Wand of Immolation
 item.micwands.wandenfeeble.name=Wand of Enfeeblement
 item.micwands.wandpacify.name=Wand of Pacification
+micwands.display.retinue='s retinue
 msg.micwands.silence.1=%s is now enchanted to be silent!
 msg.micwands.silence.0=%s is now unenchanted from being silent.
 msg.micwands.age.1=%s is now enchanted to stay baby forever!
@@ -25,3 +26,5 @@ msg.micwands.err.baby=neutral baby creatures
 msg.micwands.err.living=living creatures
 msg.micwands.err.neutral=neutral or pacified creatures
 msg.micwands.err.mob=hostile living creatures
+msg.micwands.faction.full=Your faction has reached the maximum number of members (%d§c)
+msg.micwands.faction.mob_death=Your faction member %s has died
